Added user guide to docs. Changed to correct version.